push Dockerfile java update